Added file run confirmation

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
 			},
 			{
 				"command": "extension.selectTerminal",
-				"title": "Choose Terminal Type"
+				"title": "IMS: Choose Terminal Type"
 			}
 		],
 		"menus": {
